# hh_vacancies

./: README.md  main.py  pyproject.toml
src/: class_api.py  class_json.py  class_vacancy.py  my_exceptions.py  utils.py
tests/: conftest.py  test_classes_and_utils.py
